update: remove many warnings